# PartSeg-plugin-engine

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/PartSeg_plugin_engine/: __about__.py  __init__.py
src/tests/: __init__.py
